tests/language_modules/06_arrays/invalid_semantics/mixed_array_literal.vf
module MixedArrayLiteral

procedure main()
is
    let values: Array<Integer, 3> = [1, true, 3]
    check true
end main

end MixedArrayLiteral